[project]
name = "quill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "compiler",
    "watchdog>=6.0.0",
]

[project.scripts]
quill = "quill:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.ruff.lint]
extend-select = ["SIM", "N", "ANN"]

[tool.uv.workspace]
members = [
    "quill",
]
